# python-etl

./: .exemplo.env  .gitignore  README.md  app.py  pipeline.py  pyproject.toml
